add english and images

--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<title>Dopomoga.am</title>
+</head>
+<body>
+<!-- background img/background -->
+<!-- logo img/logo -->
+<h1>Ukrainian and Artsakh
+refugee aid Center in Armenia</h1>
+<p>Dopomoga.am is a humanitarian project helping refugees from Ukraine and Artsakh. Join us in our quest to make the world a better place for those who find themselves in difficult situations.</p>
+<h2>What we do</h2>
+<ul>
+<li>collect and distribute humanitarian aid</li>
+<li>distribute used clothes</li>
+<li>provide informational and juristic assistance</li>
+</ul>
+<p>If you came from Ukraine and you need help, call to this number: <a href="tel:+37444301339">(+374) 44 301 339</a> from 10:00 till 19:00</p>
+<p>Dopomoga.am it`s also a <a = href="https://t.me/dopomoga_am">space of mutual support</a>. Together we watch movies, learn languages, do sports, communicate and discover interesting things. Come to us at 35 Khanjyan st. to become part of our warm and friendly community.</p>
+<!-- More about us - link to presentation img/prezentatsia-2024-->
+<a href="https://www.notion.so/dopomoga/dd5287b037e34e3da310d5906236ecfc">Guide with answers to common questions</a>
+<h2>How to help</h2>
+<h3>Humanitarian aid</h3>
+<p>Bring this goods or order delivery</p>
+<ul>
+<li>Food: pasta, rice, buckwheat, peas, lentils, canned meat and canned fish, sugar, sunflower oil, soap, sanitary pads</li>
+<li>Baby diapers, baby food</li>
+<li>Medicines on request</li>
+<li>Also coffee, tea, shampoo, washing powder</li>
+<li>Blankets, new bedding and towels</li>
+<li>Household items: dishes and household appliances</li>
+</ul>
+<h3>Financial aid</h3>
+<p>If you want to help financially, transfer the funds to our ConverseBank account with "charitable contribution" message:
+AMD 19300 623568600
+USD 19300 689833501
+Also you can bring cash to our Center at 35 Khanjyan st.
+See all other ways <a href="https://linktr.ee/dopomoga.am">here</a>.
+</p>
+<h3>Volunteering</h3>
+<p>If you want to work with us - please call to our phone <a href="tel:+37444301339">(+374) 44 301 339</a></p>
+<h2>Aid reports</h2>
+<p>We have distributed 28 tons of aid to 11 thousands of people.</p>
+<!-- annual reports images img/reports -->
+<h2>Contacts</h2>
+<p>Address: Armenia, Yerevan, 35 Khanjyan st.</p>
+<p>Available:  Monday- Saturday 13:00-19:00, Sunday: 12:00-18:00</p>
+<p>Phone: <a href="tel:+37444301339">(+374) 44 301 339</a></p>
+<a href="https://t.me/dopomoga_am_chat">Chat in telegram</a>
+<a href="https://t.me/dopomoga_am">Channel in telegram</a>
+<a href="https://www.facebook.com/groups/1125045808339463/">Facebook</a>
+<a href="https://www.instagram.com/dopomoga_am/">Instagram</a>
+<a href="https://www.youtube.com/@dopomoga-am">Youtube</a>
+</body>
+</html>
