--- a/index.html
+++ b/index.html
@@ -6,6 +6,52 @@
 <body>
 <!-- background img/background -->
 <!-- logo img/logo -->
+
+<h1>Штаб допомоги українцям та aрцахцям у Вірменії</h1>
+<p>Dopomoga.am – гуманітарний проект, який допомагає біженцям з України та арцахцам. Приєднуйтесь до нас у нашому прагненні зробити світ кращим для тих, хто опинився у важкій життєвій ситуації.</p>
+<h2>Чим ми займаємось</h2>
+<ul>
+<li>збираємо та видаємо гуманітарну допомогу</li>
+<li>розподіляємо вживаний одяг</li>
+<li>надаємо інформаційну та юридичну допомогу</li>
+</ul>
+<p>Якщо ви приїхали з України, та вам потрібна допомога, зателефонуйте: <a href="tel:+37444301339">(+374) 44 301 339</a> з 10:00 до 19:00</p>
+<p>А ще Dopomoga.am – <a href="https://t.me/dopomoga_am">простір взаємної підтримки</a>. Разом ми дивимось кіно, вивчаємо мови, займаємось спортом, спілкуємось та навчаємося цікавих речей. Приходьте до нас на Ханджяна, 35, щоб стати частиною нашого теплого та дружнього суспільства.</p>
+<!-- More about us - link to presentation img/prezentatsia-2024-->
+<a href="https://www.notion.so/dopomoga/dd5287b037e34e3da310d5906236ecfc">Гайд з відповідями на основні питання</a>
+<h2>Чим допомогти</h2>
+<h3>Гуманітарна допомога</h3>
+<p>?Принести чи замовити доставку</p>
+<ul>
+<li>Продукти харчування:  макарони, рис, гречка, горох, сочевиця, тушонка та рибнi консерви, цукор, соняшникова олія, мило, засоби жіночої гігієни </li>
+<li>Памперси, дитяче харчування</li>
+<li>Ліки та дитяче суміші за запитом</li>
+<li>Також геркулес, манку, каву, чай, шампунь, пральний порошок</li>
+<li>Пледи, нові постільні речі та рушники</li>
+<li>Господарські предмети: посуд та побутову техніку</li>
+</ul>
+<h3>Фінансова допомога</h3>
+<p>Бажаєте допомогти фінансово - переховуйте кошти на наш рахунок у ConverseBank з поміткою "благодійний внесок":
+AMD 19300 623568600
+USD 19300 689833501
+Чи можна принести готівку в наш Штаб на Ханджяна, 35.
+Всі інші можливості дивіться <a href="https://linktr.ee/dopomoga.am">тут</a>.
+</p>
+<h3>Волонтерство</h3>
+<p>Бажаєте попрацювати з нами - зателефонуйте на наш номер: <a href="tel:+37444301339">(+374) 44 301 339</a></p>
+<h2>Звітуємо</h2>
+<p>За весь час ми роздали 28 тонн допомоги 11 тисячам осіб.</p>
+<!-- annual reports images img/reports -->
+<h2>Контакти</h2>
+<p>Адреса: Вірменія, Єреван, вул. Ханджяна, 35</p>
+<p>Понеділок - субота: 13:00-19:00, неділя: 12:00-18:00</p>
+<p><a href="tel:+37444301339">(+374) 44 301 339</a> (телефонуйте 12:00 - 19:00)</p>
+<a href="https://t.me/dopomoga_am_chat">Чат у Телеграм (Балакалка)</a>
+<a href="https://t.me/dopomoga_am">Канал у Телеграм</a>
+<a href="https://www.facebook.com/groups/1125045808339463/">Facebook</a>
+<a href="https://www.instagram.com/dopomoga_am/">Instagram</a>
+<a href="https://www.youtube.com/@dopomoga-am">Youtube</a>
+
 <h1>Ukrainian and Artsakh
 refugee aid Center in Armenia</h1>
 <p>Dopomoga.am is a humanitarian project helping refugees from Ukraine and Artsakh. Join us in our quest to make the world a better place for those who find themselves in difficult situations.</p>
@@ -16,7 +62,7 @@ refugee aid Center in Armenia</h1>
 <li>provide informational and juristic assistance</li>
 </ul>
 <p>If you came from Ukraine and you need help, call to this number: <a href="tel:+37444301339">(+374) 44 301 339</a> from 10:00 till 19:00</p>
-<p>Dopomoga.am it`s also a <a = href="https://t.me/dopomoga_am">space of mutual support</a>. Together we watch movies, learn languages, do sports, communicate and discover interesting things. Come to us at 35 Khanjyan st. to become part of our warm and friendly community.</p>
+<p>Dopomoga.am it`s also a <a href="https://t.me/dopomoga_am">space of mutual support</a>. Together we watch movies, learn languages, do sports, communicate and discover interesting things. Come to us at 35 Khanjyan st. to become part of our warm and friendly community.</p>
 <!-- More about us - link to presentation img/prezentatsia-2024-->
 <a href="https://www.notion.so/dopomoga/dd5287b037e34e3da310d5906236ecfc">Guide with answers to common questions</a>
 <h2>How to help</h2>
@@ -44,7 +90,7 @@ See all other ways <a href="https://linktr.ee/dopomoga.am">here</a>.
 <!-- annual reports images img/reports -->
 <h2>Contacts</h2>
 <p>Address: Armenia, Yerevan, 35 Khanjyan st.</p>
-<p>Available:  Monday- Saturday 13:00-19:00, Sunday: 12:00-18:00</p>
+<p>Available:  Monday - Saturday 13:00-19:00, Sunday: 12:00-18:00</p>
 <p>Phone: <a href="tel:+37444301339">(+374) 44 301 339</a></p>
 <a href="https://t.me/dopomoga_am_chat">Chat in telegram</a>
 <a href="https://t.me/dopomoga_am">Channel in telegram</a>
