--- a/index.html
+++ b/index.html
@@ -1,57 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
 <title>Dopomoga.am</title>
 </head>
 <body>
 <!-- background img/background -->
 <!-- logo img/logo -->
-
-<h1>Штаб допомоги українцям та aрцахцям у Вірменії</h1>
-<p>Dopomoga.am – гуманітарний проект, який допомагає біженцям з України та арцахцам. Приєднуйтесь до нас у нашому прагненні зробити світ кращим для тих, хто опинився у важкій життєвій ситуації.</p>
-<h2>Чим ми займаємось</h2>
+<div lang="uk">
+<h1>РЁС‚Р°Р± РґРѕРїРѕРјРѕРіРё СѓРєСЂР°С—РЅС†СЏРј С‚Р° aСЂС†Р°С…С†СЏРј Сѓ Р’С–СЂРјРµРЅС–С—</h1>
+<p>Dopomoga.am вЂ“ РіСѓРјР°РЅС–С‚Р°СЂРЅРёР№ РїСЂРѕРµРєС‚, СЏРєРёР№ РґРѕРїРѕРјР°РіР°С” Р±С–Р¶РµРЅС†СЏРј Р· РЈРєСЂР°С—РЅРё С‚Р° Р°СЂС†Р°С…С†Р°Рј. РџСЂРёС”РґРЅСѓР№С‚РµСЃСЊ РґРѕ РЅР°СЃ Сѓ РЅР°С€РѕРјСѓ РїСЂР°РіРЅРµРЅРЅС– Р·СЂРѕР±РёС‚Рё СЃРІС–С‚ РєСЂР°С‰РёРј РґР»СЏ С‚РёС…, С…С‚Рѕ РѕРїРёРЅРёРІСЃСЏ Сѓ РІР°Р¶РєС–Р№ Р¶РёС‚С‚С”РІС–Р№ СЃРёС‚СѓР°С†С–С—.</p>
+<h2>Р§РёРј РјРё Р·Р°Р№РјР°С”РјРѕСЃСЊ</h2>
 <ul>
-<li>збираємо та видаємо гуманітарну допомогу</li>
-<li>розподіляємо вживаний одяг</li>
-<li>надаємо інформаційну та юридичну допомогу</li>
+<li>Р·Р±РёСЂР°С”РјРѕ С‚Р° РІРёРґР°С”РјРѕ РіСѓРјР°РЅС–С‚Р°СЂРЅСѓ РґРѕРїРѕРјРѕРіСѓ</li>
+<li>СЂРѕР·РїРѕРґС–Р»СЏС”РјРѕ РІР¶РёРІР°РЅРёР№ РѕРґСЏРі</li>
+<li>РЅР°РґР°С”РјРѕ С–РЅС„РѕСЂРјР°С†С–Р№РЅСѓ С‚Р° СЋСЂРёРґРёС‡РЅСѓ РґРѕРїРѕРјРѕРіСѓ</li>
 </ul>
-<p>Якщо ви приїхали з України, та вам потрібна допомога, зателефонуйте: <a href="tel:+37444301339">(+374) 44 301 339</a> з 10:00 до 19:00</p>
-<p>А ще Dopomoga.am – <a href="https://t.me/dopomoga_am">простір взаємної підтримки</a>. Разом ми дивимось кіно, вивчаємо мови, займаємось спортом, спілкуємось та навчаємося цікавих речей. Приходьте до нас на Ханджяна, 35, щоб стати частиною нашого теплого та дружнього суспільства.</p>
+<p>РЇРєС‰Рѕ РІРё РїСЂРёС—С…Р°Р»Рё Р· РЈРєСЂР°С—РЅРё, С‚Р° РІР°Рј РїРѕС‚СЂС–Р±РЅР° РґРѕРїРѕРјРѕРіР°, Р·Р°С‚РµР»РµС„РѕРЅСѓР№С‚Рµ: <a href="tel:+37444301339">(+374) 44 301 339</a> Р· 10:00 РґРѕ 19:00</p>
+<p>Рђ С‰Рµ Dopomoga.am вЂ“ <a href="https://t.me/dopomoga_am">РїСЂРѕСЃС‚С–СЂ РІР·Р°С”РјРЅРѕС— РїС–РґС‚СЂРёРјРєРё</a>. Р Р°Р·РѕРј РјРё РґРёРІРёРјРѕСЃСЊ РєС–РЅРѕ, РІРёРІС‡Р°С”РјРѕ РјРѕРІРё, Р·Р°Р№РјР°С”РјРѕСЃСЊ СЃРїРѕСЂС‚РѕРј, СЃРїС–Р»РєСѓС”РјРѕСЃСЊ С‚Р° РЅР°РІС‡Р°С”РјРѕСЃСЏ С†С–РєР°РІРёС… СЂРµС‡РµР№. РџСЂРёС…РѕРґСЊС‚Рµ РґРѕ РЅР°СЃ РЅР° РҐР°РЅРґР¶СЏРЅР°, 35, С‰РѕР± СЃС‚Р°С‚Рё С‡Р°СЃС‚РёРЅРѕСЋ РЅР°С€РѕРіРѕ С‚РµРїР»РѕРіРѕ С‚Р° РґСЂСѓР¶РЅСЊРѕРіРѕ СЃСѓСЃРїС–Р»СЊСЃС‚РІР°.</p>
 <!-- More about us - link to presentation img/prezentatsia-2024-->
-<a href="https://www.notion.so/dopomoga/dd5287b037e34e3da310d5906236ecfc">Гайд з відповідями на основні питання</a>
-<h2>Чим допомогти</h2>
-<h3>Гуманітарна допомога</h3>
-<p>?Принести чи замовити доставку</p>
+<a href="https://www.notion.so/dopomoga/dd5287b037e34e3da310d5906236ecfc">Р“Р°Р№Рґ Р· РІС–РґРїРѕРІС–РґСЏРјРё РЅР° РѕСЃРЅРѕРІРЅС– РїРёС‚Р°РЅРЅСЏ</a>
+<h2>Р§РёРј РґРѕРїРѕРјРѕРіС‚Рё</h2>
+<h3>Р“СѓРјР°РЅС–С‚Р°СЂРЅР° РґРѕРїРѕРјРѕРіР°</h3>
+<p>вЂ‹РџСЂРёРЅРµСЃС‚Рё С‡Рё Р·Р°РјРѕРІРёС‚Рё РґРѕСЃС‚Р°РІРєСѓ</p>
 <ul>
-<li>Продукти харчування:  макарони, рис, гречка, горох, сочевиця, тушонка та рибнi консерви, цукор, соняшникова олія, мило, засоби жіночої гігієни </li>
-<li>Памперси, дитяче харчування</li>
-<li>Ліки та дитяче суміші за запитом</li>
-<li>Також геркулес, манку, каву, чай, шампунь, пральний порошок</li>
-<li>Пледи, нові постільні речі та рушники</li>
-<li>Господарські предмети: посуд та побутову техніку</li>
+<li>РџСЂРѕРґСѓРєС‚Рё С…Р°СЂС‡СѓРІР°РЅРЅСЏ: В РјР°РєР°СЂРѕРЅРё, СЂРёСЃ, РіСЂРµС‡РєР°, РіРѕСЂРѕС…,В СЃРѕС‡РµРІРёС†СЏ, С‚СѓС€РѕРЅРєР° С‚Р° СЂРёР±РЅi РєРѕРЅСЃРµСЂРІРё, С†СѓРєРѕСЂ, СЃРѕРЅСЏС€РЅРёРєРѕРІР° РѕР»С–СЏ, РјРёР»Рѕ, Р·Р°СЃРѕР±Рё Р¶С–РЅРѕС‡РѕС— РіС–РіС–С”РЅРёВ </li>
+<li>РџР°РјРїРµСЂСЃРё, РґРёС‚СЏС‡Рµ С…Р°СЂС‡СѓРІР°РЅРЅСЏ</li>
+<li>Р›С–РєРё С‚Р° РґРёС‚СЏС‡Рµ СЃСѓРјС–С€С– Р·Р° Р·Р°РїРёС‚РѕРј</li>
+<li>РўР°РєРѕР¶ РіРµСЂРєСѓР»РµСЃ, РјР°РЅРєСѓ, РєР°РІСѓ, С‡Р°Р№, С€Р°РјРїСѓРЅСЊ, РїСЂР°Р»СЊРЅРёР№ РїРѕСЂРѕС€РѕРє</li>
+<li>РџР»РµРґРё, РЅРѕРІС– РїРѕСЃС‚С–Р»СЊРЅС– СЂРµС‡С– С‚Р° СЂСѓС€РЅРёРєРё</li>
+<li>Р“РѕСЃРїРѕРґР°СЂСЃСЊРєС– РїСЂРµРґРјРµС‚Рё:В РїРѕСЃСѓРґ С‚Р° РїРѕР±СѓС‚РѕРІСѓ С‚РµС…РЅС–РєСѓ</li>
 </ul>
-<h3>Фінансова допомога</h3>
-<p>Бажаєте допомогти фінансово - переховуйте кошти на наш рахунок у ConverseBank з поміткою "благодійний внесок":
+<h3>Р¤С–РЅР°РЅСЃРѕРІР° РґРѕРїРѕРјРѕРіР°</h3>
+<p>Р‘Р°Р¶Р°С”С‚Рµ РґРѕРїРѕРјРѕРіС‚Рё С„С–РЅР°РЅСЃРѕРІРѕ - РїРµСЂРµС…РѕРІСѓР№С‚Рµ РєРѕС€С‚Рё РЅР° РЅР°С€ СЂР°С…СѓРЅРѕРє Сѓ ConverseBank Р· РїРѕРјС–С‚РєРѕСЋ "Р±Р»Р°РіРѕРґС–Р№РЅРёР№ РІРЅРµСЃРѕРє":
 AMD 19300 623568600
 USD 19300 689833501
-Чи можна принести готівку в наш Штаб на Ханджяна, 35.
-Всі інші можливості дивіться <a href="https://linktr.ee/dopomoga.am">тут</a>.
+Р§Рё РјРѕР¶РЅР° РїСЂРёРЅРµСЃС‚Рё РіРѕС‚С–РІРєСѓ РІ РЅР°С€ РЁС‚Р°Р± РЅР°В РҐР°РЅРґР¶СЏРЅР°, 35.
+Р’СЃС– С–РЅС€С– РјРѕР¶Р»РёРІРѕСЃС‚С– РґРёРІС–С‚СЊСЃСЏ <a href="https://linktr.ee/dopomoga.am">С‚СѓС‚</a>.
 </p>
-<h3>Волонтерство</h3>
-<p>Бажаєте попрацювати з нами - зателефонуйте на наш номер: <a href="tel:+37444301339">(+374) 44 301 339</a></p>
-<h2>Звітуємо</h2>
-<p>За весь час ми роздали 28 тонн допомоги 11 тисячам осіб.</p>
+<h3>Р’РѕР»РѕРЅС‚РµСЂСЃС‚РІРѕ</h3>
+<p>Р‘Р°Р¶Р°С”С‚Рµ РїРѕРїСЂР°С†СЋРІР°С‚Рё Р· РЅР°РјРё -В Р·Р°С‚РµР»РµС„РѕРЅСѓР№С‚Рµ РЅР° РЅР°С€ РЅРѕРјРµСЂ: <a href="tel:+37444301339">(+374) 44 301 339</a></p>
+<h2>Р—РІС–С‚СѓС”РјРѕ</h2>
+<p>Р—Р° РІРµСЃСЊ С‡Р°СЃ РјРё СЂРѕР·РґР°Р»Рё 28 С‚РѕРЅРЅ РґРѕРїРѕРјРѕРіРё 11 С‚РёСЃСЏС‡Р°Рј РѕСЃС–Р±.</p>
 <!-- annual reports images img/reports -->
-<h2>Контакти</h2>
-<p>Адреса: Вірменія, Єреван, вул. Ханджяна, 35</p>
-<p>Понеділок - субота: 13:00-19:00, неділя: 12:00-18:00</p>
-<p><a href="tel:+37444301339">(+374) 44 301 339</a> (телефонуйте 12:00 - 19:00)</p>
-<a href="https://t.me/dopomoga_am_chat">Чат у Телеграм (Балакалка)</a>
-<a href="https://t.me/dopomoga_am">Канал у Телеграм</a>
+<h2>РљРѕРЅС‚Р°РєС‚Рё</h2>
+<p>РђРґСЂРµСЃР°: Р’С–СЂРјРµРЅС–СЏ, Р„СЂРµРІР°РЅ, РІСѓР». РҐР°РЅРґР¶СЏРЅР°, 35</p>
+<p>РџРѕРЅРµРґС–Р»РѕРє - СЃСѓР±РѕС‚Р°: 13:00-19:00, РЅРµРґС–Р»СЏ: 12:00-18:00</p>
+<p><a href="tel:+37444301339">(+374) 44 301 339</a> (С‚РµР»РµС„РѕРЅСѓР№С‚Рµ 12:00 - 19:00)</p>
+<a href="https://t.me/dopomoga_am_chat">Р§Р°С‚ Сѓ РўРµР»РµРіСЂР°Рј (Р‘Р°Р»Р°РєР°Р»РєР°)</a>
+<a href="https://t.me/dopomoga_am">РљР°РЅР°Р» Сѓ РўРµР»РµРіСЂР°Рј</a>
 <a href="https://www.facebook.com/groups/1125045808339463/">Facebook</a>
 <a href="https://www.instagram.com/dopomoga_am/">Instagram</a>
 <a href="https://www.youtube.com/@dopomoga-am">Youtube</a>
-
+</div>
+<div lang="en">
 <h1>Ukrainian and Artsakh
 refugee aid Center in Armenia</h1>
 <p>Dopomoga.am is a humanitarian project helping refugees from Ukraine and Artsakh. Join us in our quest to make the world a better place for those who find themselves in difficult situations.</p>
@@ -97,5 +99,6 @@ See all other ways <a href="https://linktr.ee/dopomoga.am">here</a>.
 <a href="https://www.facebook.com/groups/1125045808339463/">Facebook</a>
 <a href="https://www.instagram.com/dopomoga_am/">Instagram</a>
 <a href="https://www.youtube.com/@dopomoga-am">Youtube</a>
+</div>
 </body>
 </html>
