--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
 <title>Dopomoga.am</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/png" href="/img/favicon.png">
 </head>
 <body>
 <!-- background img/background -->
 <!-- logo img/logo -->
 <div lang="uk">
 <h1>Штаб допомоги українцям та aрцахцям у Вірменії</h1>
+<a href="#section_eng">English version</a>
 <p>Dopomoga.am – гуманітарний проект, який допомагає біженцям з України та арцахцам. Приєднуйтесь до нас у нашому прагненні зробити світ кращим для тих, хто опинився у важкій життєвій ситуації.</p>
 <h2>Чим ми займаємось</h2>
 <ul>
@@ -54,7 +57,7 @@ USD 19300 689833501
 <a href="https://www.youtube.com/@dopomoga-am">Youtube</a>
 </div>
 <div lang="en">
-<h1>Ukrainian and Artsakh
+<h1 id="section_eng">Ukrainian and Artsakh
 refugee aid Center in Armenia</h1>
 <p>Dopomoga.am is a humanitarian project helping refugees from Ukraine and Artsakh. Join us in our quest to make the world a better place for those who find themselves in difficult situations.</p>
 <h2>What we do</h2>
