--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <li>розподіляємо вживаний одяг</li>
 <li>надаємо інформаційну та юридичну допомогу</li>
 </ul>
-<p>Якщо ви приїхали з України, та вам потрібна допомога, зателефонуйте: <a href="tel:+37444301339">(+374) 44 301 339</a> з 10:00 до 19:00</p>
+<p><strong>Якщо ви приїхали з України, та вам потрібна допомога, зателефонуйте: <a href="tel:+37444301339">(+374) 44 301 339</a> з 10:00 до 19:00</strong></p>
 <p>А ще Dopomoga.am – <a href="https://t.me/dopomoga_am">простір взаємної підтримки</a>. Разом ми дивимось кіно, вивчаємо мови, займаємось спортом, спілкуємось та навчаємося цікавих речей. Приходьте до нас на Ханджяна, 35, щоб стати частиною нашого теплого та дружнього суспільства.</p>
 <!-- More about us - link to presentation img/prezentatsia-2024-->
 <a href="https://www.notion.so/dopomoga/dd5287b037e34e3da310d5906236ecfc">Гайд з відповідями на основні питання</a>
@@ -45,16 +45,20 @@ USD 19300 689833501
 <p>Бажаєте попрацювати з нами - зателефонуйте на наш номер: <a href="tel:+37444301339">(+374) 44 301 339</a></p>
 <h2>Звітуємо</h2>
 <p>За весь час ми роздали 28 тонн допомоги 11 тисячам осіб.</p>
+<a href="img/reports/2022.jpg" target="_blank">2022</a>  
+<a href="img/reports/2023.jpg" target="_blank">2023</a>  
+<a href="img/reports/2024.jpg" target="_blank">2024</a>
+
 <!-- annual reports images img/reports -->
 <h2>Контакти</h2>
 <p>Адреса: Вірменія, Єреван, вул. Ханджяна, 35</p>
 <p>Понеділок - субота: 13:00-19:00, неділя: 12:00-18:00</p>
 <p><a href="tel:+37444301339">(+374) 44 301 339</a> (телефонуйте 12:00 - 19:00)</p>
-<a href="https://t.me/dopomoga_am_chat">Чат у Телеграм (Балакалка)</a>
-<a href="https://t.me/dopomoga_am">Канал у Телеграм</a>
-<a href="https://www.facebook.com/groups/1125045808339463/">Facebook</a>
-<a href="https://www.instagram.com/dopomoga_am/">Instagram</a>
-<a href="https://www.youtube.com/@dopomoga-am">Youtube</a>
+<a href="https://t.me/dopomoga_am_chat">Чат у Телеграм (Балакалка)</a><br>
+<a href="https://t.me/dopomoga_am">Канал у Телеграм</a><br>
+<a href="https://www.facebook.com/groups/1125045808339463/">Facebook</a><br>
+<a href="https://www.instagram.com/dopomoga_am/">Instagram</a><br>
+<a href="https://www.youtube.com/@dopomoga-am">Youtube</a><br>
 </div>
 <div lang="en">
 <h1 id="section_eng">Ukrainian and Artsakh
@@ -92,16 +96,18 @@ See all other ways <a href="https://linktr.ee/dopomoga.am">here</a>.
 <p>If you want to work with us - please call to our phone <a href="tel:+37444301339">(+374) 44 301 339</a></p>
 <h2>Aid reports</h2>
 <p>We have distributed 28 tons of aid to 11 thousands of people.</p>
-<!-- annual reports images img/reports -->
+<a href="img/reports/2022.jpg" target="_blank">2022</a>  
+<a href="img/reports/2023.jpg" target="_blank">2023</a>  
+<a href="img/reports/2024.jpg" target="_blank">2024</a>
 <h2>Contacts</h2>
 <p>Address: Armenia, Yerevan, 35 Khanjyan st.</p>
 <p>Available:  Monday - Saturday 13:00-19:00, Sunday: 12:00-18:00</p>
 <p>Phone: <a href="tel:+37444301339">(+374) 44 301 339</a></p>
-<a href="https://t.me/dopomoga_am_chat">Chat in telegram</a>
-<a href="https://t.me/dopomoga_am">Channel in telegram</a>
-<a href="https://www.facebook.com/groups/1125045808339463/">Facebook</a>
-<a href="https://www.instagram.com/dopomoga_am/">Instagram</a>
-<a href="https://www.youtube.com/@dopomoga-am">Youtube</a>
+<a href="https://t.me/dopomoga_am_chat">Chat in telegram</a><br>
+<a href="https://t.me/dopomoga_am">Channel in telegram</a><br>
+<a href="https://www.facebook.com/groups/1125045808339463/">Facebook</a><br>
+<a href="https://www.instagram.com/dopomoga_am/">Instagram</a><br>
+<a href="https://www.youtube.com/@dopomoga-am">Youtube</a><br>
 </div>
 </body>
 </html>
