--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 <link rel="icon" type="image/png" href="/img/favicon.png">
 </head>
 <body>
-<!-- background img/background -->
-<!-- logo img/logo -->
 <div lang="uk">
 <h1>Штаб допомоги українцям та aрцахцям у Вірменії</h1>
+<!--img src="img/logo_long.jpg" alt="" style="max-width:100%; height:auto;"-->
 <a href="#section_eng">English version</a>
 <p>Dopomoga.am – гуманітарний проект, який допомагає біженцям з України та арцахцам. Приєднуйтесь до нас у нашому прагненні зробити світ кращим для тих, хто опинився у важкій життєвій ситуації.</p>
 <h2>Чим ми займаємось</h2>
@@ -48,8 +47,6 @@ USD 19300 689833501
 <a href="img/reports/2022.jpg" target="_blank">2022</a>  
 <a href="img/reports/2023.jpg" target="_blank">2023</a>  
 <a href="img/reports/2024.jpg" target="_blank">2024</a>
-
-<!-- annual reports images img/reports -->
 <h2>Контакти</h2>
 <p>Адреса: Вірменія, Єреван, вул. Ханджяна, 35</p>
 <p>Понеділок - субота: 13:00-19:00, неділя: 12:00-18:00</p>
