add ARMENIAN version

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="/img/favicon.png">
 </head>
+
+
 <body>
 <div lang="uk">
+<img src="img/logo_long.png" alt="" style="max-width:60%; height:auto;"><br>
 <h1>Штаб допомоги українцям та aрцахцям у Вірменії</h1>
-<!--img src="img/logo_long.jpg" alt="" style="max-width:100%; height:auto;"-->
-<a href="#section_eng">English version</a>
+<a href="#section_eng">English version</a><br>
+<a href="#section_hayeren">Հայերեն</a>
 <p>Dopomoga.am – гуманітарний проект, який допомагає біженцям з України та арцахцам. Приєднуйтесь до нас у нашому прагненні зробити світ кращим для тих, хто опинився у важкій життєвій ситуації.</p>
 <h2>Чим ми займаємось</h2>
 <ul>
@@ -106,5 +109,58 @@ See all other ways <a href="https://linktr.ee/dopomoga.am">here</a>.
 <a href="https://www.instagram.com/dopomoga_am/">Instagram</a><br>
 <a href="https://www.youtube.com/@dopomoga-am">Youtube</a><br>
 </div>
+
+<div lang="hy">
+<h1 id="section_hayeren">Ուկրաինացիներին օգնության շտաբ Հայաստանում։</h1>
+<p>Dopomoga.am-ը մարդասիրական ծրագիր է, որն օգնում է փախստականներին Ուկրաինայից և Արցախցի: Միացեք մեզ՝ ովքեր ուզում են մեր հետ միասին օգնել դժվարությբւններում հայտնված մարդկանց և աշխարհը ավելի լավ վայր դարձնել։</p>
+<h2>Ինչով ենք մենք զբաղվում՝</h2>
+<ul>
+<li>Հավաքում և տրամադրում ենք մարդասիրական օգնություն։</li>
+<li>Բաժանում ենք օգտագործված հագուստը:</li>
+<li>Տրամադրում ենք ինֆորմացիոն և իրավաբանական օգնություն։</li>
+</ul>
+<p>Եթե Դուք ժամանել եք Ուկրաինայից և Ձեզ անհրաժեշտ է օգնություն՝ զանգեք հեռախոսա համարով․ <a href="tel:+37444301339">(+374) 44 301 339</a> 10:00 - 19:00</p>
+<p>Այդ թվում Dopomoga.am դա <a href="https://t.me/dopomoga_am">փոխադարձ օգնության միջավայր</a> է ։ 
+Միասին մենք դիտում ենք ֆիլմեր, սովորում ենք լեզուներ, զբաղվում սպորտով, շփվում և ձեռք ենք բերում հետաքրքրաշարժ ինֆորմացիա։
+Այցելեք մեզ Խանջյան 35 հասցեով, որպեսզի դառնալ մեր բարեհամբույր և ընկերական համայնքի մի մասը։</p>
+<!-- Ավելին մեր մասին - link to presentation img/prezentatsia-2024-->
+<a href="https://www.notion.so/dopomoga/dd5287b037e34e3da310d5906236ecfc">Հիմնական հարցերի պատասխանները</a>
+<h2>Ինչով օգնել</h2>
+<h3>Humanitarian aid</h3>
+<p>Մարդասիրական օգնություն</p>
+<ul>
+<li>Մթերք․ մակարոն, բրինձ, հնդկաձավար, սիսեռ, ոսպ, շոգեխաշ և պահածոյացված ձուկ, շաքարավազ, արեածաղկի ձեթ, կարագ, սապուն, կանաց հիգենիկ պարագաները։</li>
+<li>Տակդիրներ, մանկական սնունդ։</li>
+<li>Դեղորայք և մանկական խառնուրդ ըստ պահանջի։ </li>
+<li>Ինչպես նաև՝ Հերկուլես, ձավարեղեն, սուրճ, թեյ, շամպուն և լվացքի փոշի։</li>
+<li>Սեզոնային հագուստ և կոշիկ՝ երեխաների և մեծերի համար։</li>
+<li>Ծածկոցներ, նոր անկողնային սպիտակեղեն, սրբիչ։</li>
+<li>Տնտեսական ապրանքներ՝ սպասք և կենցաղային տեխնիկա։</li>
+</ul>
+<h3>Ֆինանսական օգնություն</h3>
+<p>Եթե ցանկություն ունեք օգնել ֆինանսապես՝ կարող եք դրամական միջոցների փոխանցում կատարել Conversebank՝ նշելով «Մարդասիրական օգնություն»
+AMD 19300 623568600
+USD  19300 689833501
+Նաև կարող եք բերել կանխիկ դրամական միջոցներ՝ Խանջյան 35 հասցեով։
+Բոլոր այլ հնարավորությունները կարող եք գտնել <a href="https://linktr.ee/dopomoga.am">այստեղ</a>։
+</p>
+<h3>Կամավորություն</h3>
+<p>Ուզում եք փորձել մեզ հետ՝ զանգեք <a href="tel:+37444301339">(+374) 44 301 339</a></p>
+<h2>Հաշվետվություն</h2>
+<p>Մենք բաժանելենք 28 տան օգնություն 11 հազար մարդու համար։</p>
+<a href="img/reports/2022.jpg" target="_blank">2022</a>  
+<a href="img/reports/2023.jpg" target="_blank">2023</a>  
+<a href="img/reports/2024.jpg" target="_blank">2024</a>
+<h2>Կոնտակտներ</h2>
+<p>Հասցե․ Հայաստան, Երևան, Խանջյան փողոց, 35</p>
+<p>Երկուշաբթի - շաբաթ՝  13:00-19:00, Կիրակի՝ 11:00-17:00</p>
+<p>Հեռախոս. <a href="tel:+37444301339">(+374) 44 301 339</a></p>
+<a href="https://t.me/dopomoga_am_chat">Տելեգրամ (զրուցել)</a><br>
+<a href="https://t.me/dopomoga_am">Տելեգրամ (տեղեկատվություն)</a><br>
+<a href="https://www.facebook.com/groups/1125045808339463/">ֆեյսբուքի</a><br>
+<a href="https://www.instagram.com/dopomoga_am/">Ինստագրամ</a><br>
+<a href="https://www.youtube.com/@dopomoga-am">Յություբ</a><br>
+</div>
+
 </body>
 </html>
