--- a/index.html
+++ b/index.html
@@ -2,15 +2,28 @@
 <html>
 <head>
     <meta charset="UTF-8">
-<title>Dopomoga.am</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="/img/favicon.png">
+    <title>Dopomoga.am</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/img/favicon.png">
+    <style>
+            @media (max-width: 767px) {
+            .container {
+                max-width:100%; height:auto;
+            }
+            }
+
+            @media (min-width: 768px) {
+            .container {
+                max-width:30%; height:auto;
+            }
+            }
+    </style>
 </head>
 
 
 <body>
 <div lang="uk">
-<img src="img/logo_long.png" alt="" style="max-width:60%; height:auto;"><br>
+<img class="container" src="img/logo_long.png" alt=""><br>
 <h1>Штаб допомоги українцям та aрцахцям у Вірменії</h1>
 <a href="#section_eng">English version</a><br>
 <a href="#section_hayeren">Հայերեն</a>
