--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 <div lang="uk">
 <img class="container" src="img/logo_long.png" alt=""><br>
 <h1>Штаб допомоги українцям та aрцахцям у Вірменії</h1>
-<a href="#section_eng">English version</a><br>
-<a href="#section_hayeren">Հայերեն</a>
+<a href="#section_eng">Ukrainian and Artsakh
+refugee aid Center in Armenia. English version.</a><br>
+<a href="#section_hayeren">Ուկրաինացիներին օգնության շտաբ Հայաստանում։ Հայերեն:</a>
 <p>Dopomoga.am – гуманітарний проект, який допомагає біженцям з України та арцахцам. Приєднуйтесь до нас у нашому прагненні зробити світ кращим для тих, хто опинився у важкій життєвій ситуації.</p>
 <h2>Чим ми займаємось</h2>
 <ul>
