add ros version for google

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 <div lang="uk">
 <img class="container" src="img/logo_long.png" alt=""><br>
 <h1>Штаб допомоги українцям та aрцахцям у Вірменії</h1>
-<a href="#section_eng">Ukrainian and Artsakh
+<!--a href="#section_eng">Ukrainian and Artsakh
 refugee aid Center in Armenia. English version.</a><br>
-<a href="#section_hayeren">Ուկրաինացիներին օգնության շտաբ Հայաստանում։ Հայերեն:</a>
+<a href="#section_hayeren">Ուկրաինացիներին օգնության շտաբ Հայաստանում։ Հայերեն:</a><br>
+<a href="#section_ros">Штаб помощи украинцам и aрцахцам в Армении. Версія російською.</a><br-->
+<a href="#section_eng">English version.</a> <a href="#section_hayeren">Հայերեն տարբերակ:</a> <a href="#section_ros">Версія російською.</a><br>
 <p>Dopomoga.am – гуманітарний проект, який допомагає біженцям з України та арцахцам. Приєднуйтесь до нас у нашому прагненні зробити світ кращим для тих, хто опинився у важкій життєвій ситуації.</p>
 <h2>Чим ми займаємось</h2>
 <ul>
@@ -51,7 +53,7 @@ refugee aid Center in Armenia. English version.</a><br>
 <li>Господарські предмети: посуд та побутову техніку</li>
 </ul>
 <h3>Фінансова допомога</h3>
-<p>Бажаєте допомогти фінансово - переховуйте кошти на наш рахунок у ConverseBank з поміткою "благодійний внесок":
+<p>Бажаєте допомогти фінансово - перераховуйте кошти на наш рахунок у ConverseBank з поміткою "благодійний внесок":
 AMD 19300 623568600
 USD 19300 689833501
 Чи можна принести готівку в наш Штаб на Ханджяна, 35.
@@ -177,4 +179,55 @@ USD  19300 689833501
 </div>
 
 </body>
+
+<div lang="ru">
+<h1 id="section_ros">Штаб помощи украинцам и aрцахцам в Армении</h1>
+<p>Dopomoga.am – гуманитарный проект, помогающий беженцам из Украины и арцахцам. Присоединяйтесь к нам в нашем стремлении сделать мир лучше для тех, кто оказался в тяжелой жизненной ситуации.</p>
+<h2>Чем мы занимаемся</h2>
+<ul>
+<li>собираем и выдаем гуманитарную помощь</li>
+<li>распределяем б/у одежду</li>
+<li>оказываем информационную и юридическую помощь</li>
+</ul>
+<p><strong>Если вы приехали из Украины и вам нужна помощь, позвоните: <a href="tel:+37444301339">(+374) 44 301 339</a> с 10:00 до 19:00</strong></p>
+<p>А еще Dopomoga.am – <a href="https://t.me/dopomoga_am">пространство взаимной поддержки</a>. Вместе мы смотрим кино, изучаем языки, занимаемся спортом, общаемся и учимся. Приходите к нам на Ханджяна, 35, чтобы стать частью нашего теплого и дружественного общества.</p>
+<!-- More about us - link to presentation img/prezentatsia-2024-->
+<a href="https://www.notion.so/dopomoga/dd5287b037e34e3da310d5906236ecfc">Гайд с ответами на основные вопросы</a>
+<h2>Чем помочь</h2>
+<h3>Гуманитарная помощь</h3>
+<p>​Принести либо заказать доставку</p>
+<ul>
+<li>Продукты питания: макароны, рис, гречка, горох, чечевица, тушенка и рыбные консервы, сахар, подсолнечное масло, мыло, средства женской гигиены</li>
+<li>Памперсы, детское питание</li>
+<li>Лекарства и детское смеси по запросу</li>
+<li>Также геркулес, манку, кофе, чай, шампунь, стиральный порошок</li>
+<li>Пледы, новые постельные принадлежности и полотенца</li>
+<li>Хозяйственные предметы: посуда и бытовая техника</li>
+</ul>
+<h3>Финансовая помощь</h3>
+<p>Хотите помочь финансово - перечисляйте средства на наш счет в ConverseBank с пометкой "благотворительный взнос"
+AMD 19300 623568600
+USD 19300 689833501
+Можно принести наличные деньги в наш Штаб на Ханджана, 35.
+Все другие возможности смотрите <a href="https://linktr.ee/dopomoga.am">тут</a>.
+</p>
+<h3>Волонтерство</h3>
+<p>Хотите поработать с нами - позвоните на наш номер: <a href="tel:+37444301339">(+374) 44 301 339</a></p>
+<h2>Отчет</h2>
+<p>За все время мы раздали 28 тонн помощи 11 тысячам человек.</p>
+<a href="img/reports/2022.jpg" target="_blank">2022</a>  
+<a href="img/reports/2023.jpg" target="_blank">2023</a>  
+<a href="img/reports/2024.jpg" target="_blank">2024</a>
+<h2>Контакты</h2>
+<p>Адрес: Армения, Ереван, ул. Ханджяна, 35</p>
+<p>Понедельник - суббота: 13:00-19:00, воскресенье: 12:00-18:00</p>
+<p><a href="tel:+37444301339">(+374) 44 301 339</a> (звоните 13:00 - 19:00)</p>
+<a href="https://t.me/dopomoga_am_chat">Чат в Телеграм (Балакалка)</a><br>
+<a href="https://t.me/dopomoga_am">Канал в Телеграм</a><br>
+<a href="https://www.facebook.com/groups/1125045808339463/">Facebook</a><br>
+<a href="https://www.instagram.com/dopomoga_am/">Instagram</a><br>
+<a href="https://www.youtube.com/@dopomoga-am">Youtube</a><br>
+</div>
+
+
 </html>
